--- a/WSB.DataProcessing/Properties/ServiceDependencies/WebAppsTests - Web Deploy/appInsights1.arm.json
+++ b/WSB.DataProcessing/Properties/ServiceDependencies/WebAppsTests - Web Deploy/appInsights1.arm.json
@@ -23,7 +23,7 @@
           "contentVersion": "1.0.0.0",
           "resources": [
             {
-              "name": "WSB.DataProcessing",
+              "name": "DataProcessing.Front",
               "type": "microsoft.insights/components",
               "location": "westeurope",
               "kind": "web",
