--- a/WSB.DataProcessing/Properties/serviceDependencies.WebAppsTests - Web Deploy.json
+++ b/WSB.DataProcessing/Properties/serviceDependencies.WebAppsTests - Web Deploy.json
@@ -7,7 +7,7 @@
       "secretStore": "AzureAppSettings"
     },
     "appInsights1": {
-      "resourceId": "/subscriptions/[parameters('subscriptionId')]/resourceGroups/[parameters('resourceGroup')]/providers/microsoft.insights/components/WSB.DataProcessing",
+      "resourceId": "/subscriptions/[parameters('subscriptionId')]/resourceGroups/[parameters('resourceGroup')]/providers/microsoft.insights/components/DataProcessing.Front",
       "type": "appInsights.azure",
       "connectionId": "APPINSIGHTS_INSTRUMENTATIONKEY",
       "secretStore": "AzureAppSettings"
